# aura

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: flake8.yml  pylint.yml  ruff.yml
aura/: main.py  pyproject.toml  tracing.py
aura/agents/: aura.py
aura/tools/google_calendar/: create_event.py  edit_event.py  list_calendar_events.py  utils.py
docker/: docker-compose.yaml  otel-collector-config.yaml
src/: main.py  requirements.txt  tests.py  tracing.py
src/agents/: aura.py  data_operator.py  gmail_manager_agent.py  google_assistant.py  tool_use_agent.py  utils.py
src/aura/: main.py
src/aura/agents/: aura.py
src/aura/tools/: tool_factory.py
src/aura/tools/gmail/: create_label.py  delete_label.py  edit_label.py  list_labels.py  modify_email_labels.py
src/aura/tools/google_calendar/: create_event.py  delete_event.py  edit_event.py  list_calendar_events.py
src/aura/utils/: console.py  mcp.py  timezone.py
src/tests/: test_lancedb_integration.py
src/tools/: tool_factory.py
src/tools/gmail/: create_label.py  delete_label.py  edit_label.py  list_labels.py  modify_email_labels.py  toolkit.py
src/tools/google_calendar/: base.py  create_event.py  delete_event.py  edit_event.py  list_calendar_events.py  tookit.py  utils.py
src/tools/lancedb/: _base.py  _filters.py  _schema.py  _types.py  entity_create.py  entity_delete.py  entity_get.py  entity_search.py  entity_update.py  schema_add_column.py  schema_create.py  schema_delete.py  schema_drop_column.py  schema_elements_get.py  schema_list.py  toolkit.py
src/utils/: console.py
(+1 files in other folders)
