[project]
name = "aura"
version = "0.1.0"
description = "Aura is a project for managing and automating tasks using AI and various integrations."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogen-agentchat==0.4.0.dev13",
    "autogen-ext-mcp>=0.2.0",
    "autogen-ext[langchain,openai,azure]==0.4.0.dev13",
    "langchain-google-community[gmail]>=2.0.3",
    "python-dateutil>=2.9.0.post0",
    "rich>=13.9.4",
    "tzlocal>=5.2",
]

[tool.uv]
prerelease = "allow"
